--- a/meta_delivery_portal/views/done_delivery_order_template.xml
+++ b/meta_delivery_portal/views/done_delivery_order_template.xml
@@ -162,6 +162,11 @@
                     </div>
                 </div>
                 <div class="row" id="invoicing_shipping_address">
+
+                    <!-- Invoicing Address block  -->
+                    <!-- Invoicing Address block  -->
+                    <!-- Invoicing Address block  -->
+                    <!-- Invoicing Address block  -->
                     <div class="col-lg-6">
                         <strong class="d-block mb-1">
                             <t
@@ -227,70 +232,74 @@
                                 <span id="partner_remarks" t-field="sale_order.partner_remarks" style="background-color: yellow; padding: 2px;"/>
                             </t>
                         </div>
-
                     </div>
-                    <div t-if="sale_order.partner_shipping_id != sale_order.partner_invoice_id"
-                        id="shipping_address"
-                        class="col-lg-6">
+
+
+                    <!-- Shipping Address block  -->
+                    <!-- Shipping Address block  -->
+                    <!-- Shipping Address block  -->
+                    <!-- Shipping Address block  -->
+                    <div t-if="sale_order.partner_shipping_id != sale_order.partner_invoice_id" id="shipping_address" class="col-lg-6">
                         <strong class="d-block mb-1">
                             Shipping Address:
                         </strong>
 
                         <div>
                             <strong>Name :</strong>
-                            <t style="padding-top: 20px;" t-esc="sale_order.partner_invoice_id.name" />
-                            <t t-if="sale_order.partner_invoice_id.name" />
+                            <t style="padding-top: 20px;" t-esc="sale_order.partner_shipping_id.name" />
+                            <t t-if="sale_order.partner_shipping_id.name" />
                         </div>
 
                         <!--Phone Mobile-->
                         <div>
                             <strong>Phone :</strong>
-                            <span t-set="has_phone" t-value="sale_order.partner_id.phone" />
-                            <span t-set="has_mobile" t-value="sale_order.partner_id.mobile" />
+                            <span t-set="has_phone" t-value="sale_order.partner_shipping_id.phone" />
+                            <span t-set="has_mobile" t-value="sale_order.partner_shipping_id.mobile" />
                             <t t-if="has_phone and has_mobile">
-                                <span id="phone" t-field="sale_order.partner_id.phone" />
+                                <span id="phone" t-field="sale_order.partner_shipping_id.phone" />
                             </t>
                             <t t-else="">
-                                <span id="mobile" t-field="sale_order.partner_id.mobile" />
+                                <span id="mobile" t-field="sale_order.partner_shipping_id.mobile" />
                             </t>
                         </div>
 
                         <div>
                             <strong>Address :</strong>
                             <t
-                            t-esc="sale_order.partner_invoice_id.street" /> <t
-                            t-if="sale_order.partner_invoice_id.street" />, <t
-                            t-esc="sale_order.partner_invoice_id.street2" /> <t
-                            t-if="sale_order.partner_invoice_id.street2" />, <t
-                            t-esc="sale_order.partner_invoice_id.city" /> <t
-                            t-if="sale_order.partner_invoice_id.city" />
+                            t-esc="sale_order.partner_shipping_id.street" /> <t
+                            t-if="sale_order.partner_shipping_id.street" />, <t
+                            t-esc="sale_order.partner_shipping_id.street2" /> <t
+                            t-if="sale_order.partner_shipping_id.street2" />, <t
+                            t-esc="sale_order.partner_shipping_id.city" /> <t
+                            t-if="sale_order.partner_shipping_id.city" />
                         </div>
 
                         <div>
-                            <t t-if="sale_order.partner_id.area_id">
+                            <t t-if="sale_order.partner_shipping_id.area_id">
                                 <strong>Area :</strong>
-                                <span id="area" t-field="sale_order.partner_id.area_id.name" />
+                                <span id="area" t-field="sale_order.partner_shipping_id.area_id.name" />
                             </t>
                         </div>
                         <div>
-                            <t t-if="sale_order.partner_id.sub_area_id">
+                            <t t-if="sale_order.partner_shipping_id.sub_area_id">
                                 <strong>Sub Area :</strong>
-                                <span id="area" t-field="sale_order.partner_id.sub_area_id.name" />
+                                <span id="area" t-field="sale_order.partner_shipping_id.sub_area_id.name" />
                             </t>
                         </div>
-
                     </div>
-                    <div t-if="sale_order.partner_id.map_url"
+
+                    <div t-if="sale_order.partner_shipping_id.map_url"
                         style="padding-top: 15px; padding-bottom: 15px;">
                         <t>
                             <strong>Map Url:</strong>
                         </t>
-                        <a t-attf-href="{{sale_order.partner_id.map_url}}" target="_blank">
-                            <span t-field="sale_order.partner_id.map_url" />
+                        <a t-attf-href="{{sale_order.partner_shipping_id.map_url}}" target="_blank">
+                            <span t-field="sale_order.partner_shipping_id.map_url" />
                         </a>
-
                     </div>
                 </div>
+
+
 
                 <t t-set="invoices"
                     t-value="sale_order.invoice_ids.filtered(lambda i: i.state not in ['cancel'])" />
@@ -303,14 +312,6 @@
                                 <t t-set="authorized_tx_ids" t-value="i.transaction_ids.filtered(lambda tx: tx.state == 'authorized')" />
                                 <div
                                     class="d-flex flex-wrap align-items-center justify-content-between">
-<!--                                    <div>-->
-<!--                                        <a t-att-href="report_url">-->
-<!--                                            <h3>Print Invoice</h3>-->
-<!--                                        </a>-->
-<!--                                        <div class="small d-lg-inline-block">Date: <span-->
-<!--                                                class="text-muted" t-field="i.invoice_date" />-->
-<!--                                        </div>-->
-<!--                                    </div>-->
                                     <span t-if="i.payment_state in ('paid', 'in_payment')"
                                         class="small badge text-bg-success orders_label_text_align">
                                         <i class="fa fa-fw fa-check" />
